--- a/catalog-app-monitor.yaml
+++ b/catalog-app-monitor.yaml
@@ -2,14 +2,18 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: catalog-app-monitor
+  namespace: monitoring
   labels:
-    release: kube-prometheus-stack
+    release: kube-prometheus-stacke
 spec:
+  namespaceSelector:
+    matchNames:
+      - retail
   selector:
     matchLabels:
       app.kubernetes.io/name: catalog
       app.kubernetes.io/instance: catalog
   endpoints:
-    - port: 8080
+    - port: 8080  
       path: /metrics
-      interval: 15m
+      interval: 15s
